<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MMFont_sample</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="zg"> Zawgyi -&#160; </string>
    <string name="mm3"> Myanmar 3 -&#160; </string>
    <string name="ygh"> Yunghkio -&#160; </string>
    <string name="mymm"> MyMyanmar -&#160;</string>
    <string name="masterpiece"> Masterpiece -&#160;</string>

</resources>